--- a/AlgorithmGossip/MaxGuest.htm
+++ b/AlgorithmGossip/MaxGuest.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>³Ì¤j³X«È¼Æ</title>
+  <title>æœ€å¤§è¨ªå®¢æ•¸</title>
 </head>
 
 
@@ -41,28 +41,28 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;³Ì¤j³X«È¼Æ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;æœ€å¤§è¨ªå®¢æ•¸</a></h1>
 
 
 
-<h2>»¡©ú</h2>
-²{±NÁ|¦æ¤@­ÓÀ\·|¡AÅı³X«È¨Æ¥ı¶ñ¼g¨ì¹F®É¶¡»PÂ÷¶}®É¶¡¡A¬°¤F´x´¤®y¦ìªº¼Æ¥Ø¡A¥²¶·¥ı¦ô­p¤£¦P®É¶¡ªº³Ì¤j³X«È¼Æ¡C<br>
-<h2>¸Ñªk</h2>
-³o­ÓÃD¥Ø¬İ¦ü¦³¨Ç½ÆÂø¡A¨ä¹ê¬Û·íÂ²³æ¡A³æ´N­pºâ³X«È¼Æ³o­Ó¥Øªº¡A¦P®É¦Ò¼{¦P¤@³X«Èªº¨Ó³X®É¶¡»PÂ÷¶}®É¶¡¡A¤Ï¦Ó·|¨Ïµ{¦¡ÅÜ±o½ÆÂø¡F¥u­n±N¨Ó³X®É¶¡»PÂ÷¶}®É¶¡¤À¶}³B²z´N¥i¥H¤F¡A°²³]³X«È i ªº¨Ó³X®É¶¡¬°x[i]¡A¦ÓÂ÷¶}®É¶¡¬°y[i]¡C<br>
+<h2>èªªæ˜</h2>
+ç¾å°‡èˆ‰è¡Œä¸€å€‹é¤æœƒï¼Œè®“è¨ªå®¢äº‹å…ˆå¡«å¯«åˆ°é”æ™‚é–“èˆ‡é›¢é–‹æ™‚é–“ï¼Œç‚ºäº†æŒæ¡åº§ä½çš„æ•¸ç›®ï¼Œå¿…é ˆå…ˆä¼°è¨ˆä¸åŒæ™‚é–“çš„æœ€å¤§è¨ªå®¢æ•¸ã€‚<br>
+<h2>è§£æ³•</h2>
+é€™å€‹é¡Œç›®çœ‹ä¼¼æœ‰äº›è¤‡é›œï¼Œå…¶å¯¦ç›¸ç•¶ç°¡å–®ï¼Œå–®å°±è¨ˆç®—è¨ªå®¢æ•¸é€™å€‹ç›®çš„ï¼ŒåŒæ™‚è€ƒæ…®åŒä¸€è¨ªå®¢çš„ä¾†è¨ªæ™‚é–“èˆ‡é›¢é–‹æ™‚é–“ï¼Œåè€Œæœƒä½¿ç¨‹å¼è®Šå¾—è¤‡é›œï¼›åªè¦å°‡ä¾†è¨ªæ™‚é–“èˆ‡é›¢é–‹æ™‚é–“åˆ†é–‹è™•ç†å°±å¯ä»¥äº†ï¼Œå‡è¨­è¨ªå®¢ i çš„ä¾†è¨ªæ™‚é–“ç‚ºx[i]ï¼Œè€Œé›¢é–‹æ™‚é–“ç‚ºy[i]ã€‚<br>
 <br>
-¦b¸ê®Æ¿é¤J§¹²¦¤§«á¡A±Nx[i]»Py[i]¤À§O¶i¦æ±Æ§Ç¡]¥Ñ¤p¨ì¤j¡^¡A¹D²z«ÜÂ²³æ¡A¥u­n¥ı­pºâ¬Y®É¤§«eÁ`¦@¨Ó³X¤F¦h¤Ö³X«È¡AµM«á¦A´î¥h¬Y®É¤§«eªºÂ÷¶}³X«È¡A´N¥i¥H»´©öªº¸Ñ¥X³o­Ó°İÃD¡C <br>
+åœ¨è³‡æ–™è¼¸å…¥å®Œç•¢ä¹‹å¾Œï¼Œå°‡x[i]èˆ‡y[i]åˆ†åˆ¥é€²è¡Œæ’åºï¼ˆç”±å°åˆ°å¤§ï¼‰ï¼Œé“ç†å¾ˆç°¡å–®ï¼Œåªè¦å…ˆè¨ˆç®—æŸæ™‚ä¹‹å‰ç¸½å…±ä¾†è¨ªäº†å¤šå°‘è¨ªå®¢ï¼Œç„¶å¾Œå†æ¸›å»æŸæ™‚ä¹‹å‰çš„é›¢é–‹è¨ªå®¢ï¼Œå°±å¯ä»¥è¼•æ˜“çš„è§£å‡ºé€™å€‹å•é¡Œã€‚ <br>
 
 
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 100 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); // §Ö³t±Æ§Çªk<br>int maxguest(int[], int[], int, int); <br><br>int main(void) { <br>    int x[MAX] = {0}; <br>    int y[MAX] = {0}; <br>    int time = 0; <br>    int count = 0; <br><br>    printf("\n¿é¤J¨Ó³X»PÂ÷¶}125;®É¶¡(0~24)¡G"); <br>    printf("\n½d¨Ò¡G10 15"); <br>    printf("\n¿é¤J-1 -1µ²§ô"); <br>    while(count &lt; MAX) { <br>        printf("\n&gt;&gt;"); <br>        scanf("%d %d", &amp;x[count], &amp;y[count]); <br>        if(x[count] &lt; 0) <br>            break; <br>        count++; <br>    } <br><br>    if(count &gt;= MAX) { <br>        printf("\n¶W¥X³Ì¤j³X«È¼Æ(%d)", MAX); <br>        count--; <br>    } <br><br>    // ¹w¥ı±Æ§Ç <br>    quicksort(x, 0, count); <br>    quicksort(y, 0, count); <br><br>    while(time &lt; 25) { <br>        printf("\n%d ®Éªº³Ì¤j³X«È¼Æ¡G%d", <br>                   time, maxguest(x, y, count, time)); <br>        time++; <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int maxguest(int x[], int y[], int count, int time) { <br>    int i, num = 0; <br><br>    for(i = 0; i &lt;= count; i++) { <br>        if(time &gt; x[i]) <br>            num++; <br>        if(time &gt; y[i]) <br>            num--; <br>    } <br><br>    return num; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define MAX 100 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); // å¿«é€Ÿæ’åºæ³•<br>int maxguest(int[], int[], int, int); <br><br>int main(void) { <br>    int x[MAX] = {0}; <br>    int y[MAX] = {0}; <br>    int time = 0; <br>    int count = 0; <br><br>    printf("\nè¼¸å…¥ä¾†è¨ªèˆ‡é›¢é–‹125;æ™‚é–“(0~24)ï¼š"); <br>    printf("\nç¯„ä¾‹ï¼š10 15"); <br>    printf("\nè¼¸å…¥-1 -1çµæŸ"); <br>    while(count &lt; MAX) { <br>        printf("\n&gt;&gt;"); <br>        scanf("%d %d", &amp;x[count], &amp;y[count]); <br>        if(x[count] &lt; 0) <br>            break; <br>        count++; <br>    } <br><br>    if(count &gt;= MAX) { <br>        printf("\nè¶…å‡ºæœ€å¤§è¨ªå®¢æ•¸(%d)", MAX); <br>        count--; <br>    } <br><br>    // é å…ˆæ’åº <br>    quicksort(x, 0, count); <br>    quicksort(y, 0, count); <br><br>    while(time &lt; 25) { <br>        printf("\n%d æ™‚çš„æœ€å¤§è¨ªå®¢æ•¸ï¼š%d", <br>                   time, maxguest(x, y, count, time)); <br>        time++; <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int maxguest(int x[], int y[], int count, int time) { <br>    int i, num = 0; <br><br>    for(i = 0; i &lt;= count; i++) { <br>        if(time &gt; x[i]) <br>            num++; <br>        if(time &gt; y[i]) <br>            num--; <br>    } <br><br>    return num; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
 
 <br>
 
@@ -71,7 +71,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>import java.io.*;<br>import java.util.*;<br><br>public class MaxVisit {<br>    public static int maxGuest(int[] x, int[] y, int time) {<br>        int num = 0; <br><br>        for(int i = 0; i &lt; x.length; i++) { <br>            if(time &gt; x[i]) <br>                num++; <br>            if(time &gt; y[i]) <br>                num--; <br>        } <br><br>        return num; <br>    }<br>    <br>    public static void main(String[] args) throws IOException {<br>        BufferedReader buf = new BufferedReader(<br>                new InputStreamReader(System.in));<br>        System.out.println("¿é¤J¨Ó³X®É¶¡»PÂ÷¶}®É¶¡(0~24)¡G");<br>        System.out.println("½d¨Ò¡G10 15"); <br>        System.out.println("¿é¤J-1µ²§ô");<br>        <br>        java.util.ArrayList list = new ArrayList();<br>        <br>        while(true) { <br>            System.out.print("&gt;&gt;"); <br>            String input = buf.readLine();<br>            <br>            if(input.equals("-1")) <br>                break; <br>            <br>            list.add(input);<br>        }<br>        <br>        int[] x = new int[list.size()];<br>        int[] y = new int[list.size()];<br>        <br>        for(int i = 0; i &lt; x.length; i++) {<br>            String input = (String) list.get(i);<br>            String[] strs = input.split(" ");<br>            <br>            x[i] = Integer.parseInt(strs[0]);<br>            y[i] = Integer.parseInt(strs[1]);<br>        }<br>        <br>        Arrays.sort(x);<br>        Arrays.sort(y);<br>        <br>        for(int time = 0; time &lt; 25; time++) { <br>            System.out.println(time + " ®Éªº³Ì¤j³X«È¼Æ¡G" <br>                    + MaxVisit.maxGuest(x, y, time)); <br>        } <br>    }<br>}</pre>
+<pre>import java.io.*;<br>import java.util.*;<br><br>public class MaxVisit {<br>    public static int maxGuest(int[] x, int[] y, int time) {<br>        int num = 0; <br><br>        for(int i = 0; i &lt; x.length; i++) { <br>            if(time &gt; x[i]) <br>                num++; <br>            if(time &gt; y[i]) <br>                num--; <br>        } <br><br>        return num; <br>    }<br>    <br>    public static void main(String[] args) throws IOException {<br>        BufferedReader buf = new BufferedReader(<br>                new InputStreamReader(System.in));<br>        System.out.println("è¼¸å…¥ä¾†è¨ªæ™‚é–“èˆ‡é›¢é–‹æ™‚é–“(0~24)ï¼š");<br>        System.out.println("ç¯„ä¾‹ï¼š10 15"); <br>        System.out.println("è¼¸å…¥-1çµæŸ");<br>        <br>        java.util.ArrayList list = new ArrayList();<br>        <br>        while(true) { <br>            System.out.print("&gt;&gt;"); <br>            String input = buf.readLine();<br>            <br>            if(input.equals("-1")) <br>                break; <br>            <br>            list.add(input);<br>        }<br>        <br>        int[] x = new int[list.size()];<br>        int[] y = new int[list.size()];<br>        <br>        for(int i = 0; i &lt; x.length; i++) {<br>            String input = (String) list.get(i);<br>            String[] strs = input.split(" ");<br>            <br>            x[i] = Integer.parseInt(strs[0]);<br>            y[i] = Integer.parseInt(strs[1]);<br>        }<br>        <br>        Arrays.sort(x);<br>        Arrays.sort(y);<br>        <br>        for(int time = 0; time &lt; 25; time++) { <br>            System.out.println(time + " æ™‚çš„æœ€å¤§è¨ªå®¢æ•¸ï¼š" <br>                    + MaxVisit.maxGuest(x, y, time)); <br>        } <br>    }<br>}</pre>
 <br>
 
 
