--- a/AlgorithmGossip/MergeSort.htm
+++ b/AlgorithmGossip/MergeSort.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¦X¨Ö±Æ§Çªk</title>
+  <title>åˆä½µæ’åºæ³•</title>
 </head>
 
 
@@ -51,36 +51,36 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¦X¨Ö±Æ§Çªk</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;åˆä½µæ’åºæ³•</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¤§«e©Ò¤¶²Ğªº±Æ§Çªk³£¬O¦b¦P¤@­Ó°}¦C¤¤ªº±Æ§Ç¡A¦Ò¼{¤µ¤é¦³¨âµ§©Î¨âµ§¥H¤Wªº¸ê®Æ¡A¥¦¥i¯à¬O¤£¦P°}¦C¤¤ªº¸ê®Æ¡A©Î¬O¤£¦PÀÉ®×¤¤ªº¸ê®Æ¡A¦p¦ó¬°¥¦­Ì¶i¦æ±Æ§Ç¡H<br>
-<h2>¸Ñªk</h2>
-¥i¥H¨Ï¥Î¦X¨Ö±Æ§Çªk¡A¦X¨Ö±Æ§Çªk°ò¥»¬O±N¨âµ§¤w±Æ§Çªº¸ê®Æ¦X¨Ö¨Ã¶i¦æ±Æ§Ç¡A¦pªG©ÒÅª¤Jªº¸ê®Æ©|¥¼±Æ§Ç¡A¥i¥H¥ı§Q¥Î¨ä¥¦ªº±Æ§Ç¤è¦¡¨Ó³B²z³o¨âµ§¸ê®Æ¡AµM«á¦A±N±Æ§Ç¦nªº³o¨âµ§¸ê®Æ¦X¨Ö¡C<br>
+<h2>èªªæ˜</h2>
+ä¹‹å‰æ‰€ä»‹ç´¹çš„æ’åºæ³•éƒ½æ˜¯åœ¨åŒä¸€å€‹é™£åˆ—ä¸­çš„æ’åºï¼Œè€ƒæ…®ä»Šæ—¥æœ‰å…©ç­†æˆ–å…©ç­†ä»¥ä¸Šçš„è³‡æ–™ï¼Œå®ƒå¯èƒ½æ˜¯ä¸åŒé™£åˆ—ä¸­çš„è³‡æ–™ï¼Œæˆ–æ˜¯ä¸åŒæª”æ¡ˆä¸­çš„è³‡æ–™ï¼Œå¦‚ä½•ç‚ºå®ƒå€‘é€²è¡Œæ’åºï¼Ÿ<br>
+<h2>è§£æ³•</h2>
+å¯ä»¥ä½¿ç”¨åˆä½µæ’åºæ³•ï¼Œåˆä½µæ’åºæ³•åŸºæœ¬æ˜¯å°‡å…©ç­†å·²æ’åºçš„è³‡æ–™åˆä½µä¸¦é€²è¡Œæ’åºï¼Œå¦‚æœæ‰€è®€å…¥çš„è³‡æ–™å°šæœªæ’åºï¼Œå¯ä»¥å…ˆåˆ©ç”¨å…¶å®ƒçš„æ’åºæ–¹å¼ä¾†è™•ç†é€™å…©ç­†è³‡æ–™ï¼Œç„¶å¾Œå†å°‡æ’åºå¥½çš„é€™å…©ç­†è³‡æ–™åˆä½µã€‚<br>
 <br>
-¦³¤H°İ¹D¡A¦pªG¨âµ§¸ê®Æ¥»¨­´NµL±Æ§Ç¶¶§Ç¡A¦ó¤£±N©Ò¦³ªº¸ê®ÆÅª¤J¡A¦A¤@¦¸¶i¦æ±Æ§Ç¡H±Æ§Çªººë¯«¬O¾¨¶q§Q¥Î¸ê®Æ¤w±Æ§Çªº³¡¥÷¡A¨Ó¥[§Ö±Æ§Çªº®Ä²v¡A¤pµ§¸ê®Æªº
-±Æ§Ç¸û¬°§Ö³t¡A¦pªG¤pµ§¸ê®Æ±Æ§Ç§¹¦¨¤§«á¡A¦A¦X¨Ö³B²z®É¡A¦]¬°¨âµ§¸ê®Æ³£¦³±Æ§Ç¤F¡A©Ò¦³¦b¦X¨Ö±Æ§Ç®É·|¤ñ³æ¯ÂÅª¤J©Ò¦³ªº¸ê®Æ¦A¤@¦¸±Æ§Ç¨Óªº¦³®Ä²v¡C<br>
+æœ‰äººå•é“ï¼Œå¦‚æœå…©ç­†è³‡æ–™æœ¬èº«å°±ç„¡æ’åºé †åºï¼Œä½•ä¸å°‡æ‰€æœ‰çš„è³‡æ–™è®€å…¥ï¼Œå†ä¸€æ¬¡é€²è¡Œæ’åºï¼Ÿæ’åºçš„ç²¾ç¥æ˜¯å„˜é‡åˆ©ç”¨è³‡æ–™å·²æ’åºçš„éƒ¨ä»½ï¼Œä¾†åŠ å¿«æ’åºçš„æ•ˆç‡ï¼Œå°ç­†è³‡æ–™çš„
+æ’åºè¼ƒç‚ºå¿«é€Ÿï¼Œå¦‚æœå°ç­†è³‡æ–™æ’åºå®Œæˆä¹‹å¾Œï¼Œå†åˆä½µè™•ç†æ™‚ï¼Œå› ç‚ºå…©ç­†è³‡æ–™éƒ½æœ‰æ’åºäº†ï¼Œæ‰€æœ‰åœ¨åˆä½µæ’åºæ™‚æœƒæ¯”å–®ç´”è®€å…¥æ‰€æœ‰çš„è³‡æ–™å†ä¸€æ¬¡æ’åºä¾†çš„æœ‰æ•ˆç‡ã€‚<br>
 <br>
-¨º»ò¥i¤£¥i¥Hª½±µ¨Ï¥Î¦X¨Ö±Æ§Çªk¥»¨­¨Ó³B²z¾ã­Ó±Æ§Çªº°Ê§@¡H¦Ó¤£°Ê¥Î¨ì¨ä¥¦ªº±Æ§Ç¤è¦¡¡Hµª®×¬OªÖ©wªº¡A¥u­n±N©Ò¦³ªº¼Æ¦r¤£Â_ªº¤À¬°¨â­Óµ¥¤À¡Aª½¨ì³Ì«á³Ñ¤@­Ó¼Æ¦r¬°¤î¡AµM«á¦A¤Ï¹L¨Ó¤£Â_ªº¦X¨Ö¡A´N¦p¤U¹Ï©Ò¥Ü¡G <br>
+é‚£éº¼å¯ä¸å¯ä»¥ç›´æ¥ä½¿ç”¨åˆä½µæ’åºæ³•æœ¬èº«ä¾†è™•ç†æ•´å€‹æ’åºçš„å‹•ä½œï¼Ÿè€Œä¸å‹•ç”¨åˆ°å…¶å®ƒçš„æ’åºæ–¹å¼ï¼Ÿç­”æ¡ˆæ˜¯è‚¯å®šçš„ï¼Œåªè¦å°‡æ‰€æœ‰çš„æ•¸å­—ä¸æ–·çš„åˆ†ç‚ºå…©å€‹ç­‰åˆ†ï¼Œç›´åˆ°æœ€å¾Œå‰©ä¸€å€‹æ•¸å­—ç‚ºæ­¢ï¼Œç„¶å¾Œå†åéä¾†ä¸æ–·çš„åˆä½µï¼Œå°±å¦‚ä¸‹åœ–æ‰€ç¤ºï¼š <br>
 
-<div style="text-align: center;"><img style="width: 331px; height: 181px;" alt="¦X¨Ö±Æ§Ç" title="¦X¨Ö±Æ§Ç" src="images/mergeSort-1.jpg"></div>
+<div style="text-align: center;"><img style="width: 331px; height: 181px;" alt="åˆä½µæ’åº" title="åˆä½µæ’åº" src="images/mergeSort-1.jpg"></div>
 <br>
 <br>
-¤£¹L°ò¥»¤W¤À³Î¤S·|ªá¥hÃB¥~ªº®É¶¡¡A¤£¦p¨Ï¥Î¨ä¥¦¸û¦nªº±Æ§Çªk¨Ó±Æ§Ç¤pµ§¸ê®Æ¡A¦A¨Ï¥Î¦X¨Ö±Æ§Ç¨Óªº¦³®Ä²v¡C<br>
+ä¸éåŸºæœ¬ä¸Šåˆ†å‰²åˆæœƒèŠ±å»é¡å¤–çš„æ™‚é–“ï¼Œä¸å¦‚ä½¿ç”¨å…¶å®ƒè¼ƒå¥½çš„æ’åºæ³•ä¾†æ’åºå°ç­†è³‡æ–™ï¼Œå†ä½¿ç”¨åˆä½µæ’åºä¾†çš„æœ‰æ•ˆç‡ã€‚<br>
 <br>
-¤U­±³o­Óµ{¦¡½d¨Ò¡A§Ú­Ì¨Ï¥Î§Ö³t±Æ§Çªk¨Ó³B²z¤pµ§¸ê®Æ±Æ§Ç¡AµM«á¦A¨Ï¥Î¦X¨Ö±Æ§Çªk³B²z¦X¨Öªº°Ê§@¡C <br>
+ä¸‹é¢é€™å€‹ç¨‹å¼ç¯„ä¾‹ï¼Œæˆ‘å€‘ä½¿ç”¨å¿«é€Ÿæ’åºæ³•ä¾†è™•ç†å°ç­†è³‡æ–™æ’åºï¼Œç„¶å¾Œå†ä½¿ç”¨åˆä½µæ’åºæ³•è™•ç†åˆä½µçš„å‹•ä½œã€‚ <br>
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX1 10 <br>#define MAX2 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br>void mergesort(int[], int, int[], int, int[]); <br><br>int main(void) { <br>    int number1[MAX1] = {0}; <br>    int number2[MAX1] = {0}; <br>    int number3[MAX1+MAX2] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("±Æ§Ç«e¡G"); <br>    printf("\nnumber1[]¡G"); <br>    for(i = 0; i &lt; MAX1; i++) { <br>        number1[i] = rand() % 100; <br>        printf("%d ", number1[i]); <br>    } <br><br>    printf("\nnumber2[]¡G"); <br>    for(i = 0; i &lt; MAX2; i++) { <br>        number2[i] = rand() % 100; <br>        printf("%d ", number2[i]); <br>    } <br><br>    // ¥ı±Æ§Ç¨âµ§¸ê®Æ <br>    quicksort(number1, 0, MAX1-1); <br>    quicksort(number2, 0, MAX2-1); <br><br>    printf("\n±Æ§Ç«á¡G"); <br>    printf("\nnumber1[]¡G"); <br>    for(i = 0; i &lt; MAX1; i++) <br>        printf("%d ", number1[i]); <br>    printf("\nnumber2[]¡G"); <br>    for(i = 0; i &lt; MAX2; i++) <br>        printf("%d ", number2[i]); <br><br>    // ¦X¨Ö±Æ§Ç <br>    mergesort(number1, MAX1, number2, MAX2, number3); <br><br>    printf("\n¦X¨Ö«á¡G"); <br>    for(i = 0; i &lt; MAX1+MAX2; i++) <br>        printf("%d ", number3[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br><br>void mergesort(int number1[], int M, int number2[], <br>                int N, int number3[]) { <br>    int i = 0, j = 0, k = 0; <br><br>    while(i &lt; M &amp;&amp; j &lt; N) { <br>        if(number1[i] &lt;= number2[j]) <br>            number3[k++] = number1[i++]; <br>        else <br>            number3[k++] = number2[j++]; <br>    } <br><br>    while(i &lt; M) <br>        number3[k++] = number1[i++]; <br>    while(j &lt; N) <br>        number3[k++] = number2[j++]; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX1 10 <br>#define MAX2 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br>void mergesort(int[], int, int[], int, int[]); <br><br>int main(void) { <br>    int number1[MAX1] = {0}; <br>    int number2[MAX1] = {0}; <br>    int number3[MAX1+MAX2] = {0}; <br>    int i, num;  <br><br>    srand(time(NULL)); <br><br>    printf("æ’åºå‰ï¼š"); <br>    printf("\nnumber1[]ï¼š"); <br>    for(i = 0; i &lt; MAX1; i++) { <br>        number1[i] = rand() % 100; <br>        printf("%d ", number1[i]); <br>    } <br><br>    printf("\nnumber2[]ï¼š"); <br>    for(i = 0; i &lt; MAX2; i++) { <br>        number2[i] = rand() % 100; <br>        printf("%d ", number2[i]); <br>    } <br><br>    // å…ˆæ’åºå…©ç­†è³‡æ–™ <br>    quicksort(number1, 0, MAX1-1); <br>    quicksort(number2, 0, MAX2-1); <br><br>    printf("\næ’åºå¾Œï¼š"); <br>    printf("\nnumber1[]ï¼š"); <br>    for(i = 0; i &lt; MAX1; i++) <br>        printf("%d ", number1[i]); <br>    printf("\nnumber2[]ï¼š"); <br>    for(i = 0; i &lt; MAX2; i++) <br>        printf("%d ", number2[i]); <br><br>    // åˆä½µæ’åº <br>    mergesort(number1, MAX1, number2, MAX2, number3); <br><br>    printf("\nåˆä½µå¾Œï¼š"); <br>    for(i = 0; i &lt; MAX1+MAX2; i++) <br>        printf("%d ", number3[i]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br><br>void mergesort(int number1[], int M, int number2[], <br>                int N, int number3[]) { <br>    int i = 0, j = 0, k = 0; <br><br>    while(i &lt; M &amp;&amp; j &lt; N) { <br>        if(number1[i] &lt;= number2[j]) <br>            number3[k++] = number1[i++]; <br>        else <br>            number3[k++] = number2[j++]; <br>    } <br><br>    while(i &lt; M) <br>        number3[k++] = number1[i++]; <br>    while(j &lt; N) <br>        number3[k++] = number2[j++]; <br>} <br></pre>
 
 <br>
 
